tests/positive/constant_discriminant_default.safe
-- Test: constant_discriminant_default
-- Description: Local boolean constant used in a record discriminant default.
-- Expected: ACCEPT

package constant_Discriminant_Default

   default_Active : constant boolean = True;

   type default_Result (active : boolean = default_Active) is record
      value : integer;


